# src/main/resources/openapi/petstore.yaml
@@ -147,12 +147,22 @@ components:
 
     Error:
       type: object
-      required:
-        - code
-        - message
       properties:
-        code:
-          type: integer
-          format: int32
+        timestamp:
+          type: string
+          description: The date and time when the error occurred in ISO 8601 format.
+          format: date-time
+          example: "2024-01-04T15:30:00Z"
+        session:
+          type: string
+          format: uuid
+          description: A unique UUID for the session instance where the error happened, useful for tracking and debugging purposes.
+        error:
+          type: string
+          description: A brief error message or identifier.
         message:
           type: string
+          description: A detailed error message.
+        path:
+          type: string
+          description: The path that resulted in the error.
